--- a/sass/index.scss
+++ b/sass/index.scss
@@ -76,7 +76,7 @@ header {
             position: fixed;
             top: 0;
             left: 0;
-            width: 80%;
+            width: 40%;
             height: 100vh;
             background: $main-font-color-dark;
             padding: 4.4rem;
@@ -145,6 +145,35 @@ header {
     border: .6rem solid transparent;
 }
 
+// Extend for sub-headline
+%extend-SubHeadline {
+    font-size: 8.5rem;
+    font-family: $secondary-font;
+    color: $secondary-font-color;
+    font-weight: 100;
+    line-height: .4;
+    letter-spacing: 2px;
+    .first-letter {
+        text-transform: uppercase;
+        font-size: 10.3rem;
+    }
+}
+
+// Extend for asterisk
+%asterisk {
+    font-size: 1.2rem;
+    color: $secondary-font-color;
+    margin: 0 1.6rem;
+}
+
+// Extedn for btn
+%btn {
+     display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    margin-right: -2px;
+}
+
 .hero {
     width: 100%;
     height: 100vh;
@@ -154,18 +183,9 @@ header {
     align-items: center;
     text-align: center;
 
-    .sub-headline {
-        font-size: 8.5rem;
-        font-family: $secondary-font;
-        color: $secondary-font-color;
-        font-weight: 100;
-        line-height: .4;
-        letter-spacing: 2px;
-        .first-letter {
-            text-transform: uppercase;
-            font-size: 10.3rem;
-        }
-    }
+.sub-headline {
+    @extend %extend-SubHeadline;
+}
 
     .headline {
         color: #fff;
@@ -202,8 +222,99 @@ header {
                 left: 0;
             }
         }
+        .asterisk {
+            @extend %asterisk;
+        }
+    }
+
+    .headline-description {
+        h5 {
+            color: #fff;
+            font-size: 1.4rem;
+            font-weight: 100;
+            text-transform: uppercase;
+            margin-bottom: 1.2rem;
+            letter-spacing: 3px;
+            margin-right: -3px;
+        }
+    }
+    .btn {
+       @extend %btn;
+    }
+    .cta-btn {
+        font-size: 1.1rem;
+        background-color: #fff;
+        padding: .9rem 1.8rem;
+        color: $body-font-color;
+        border-radius: .4rem;
+        transition: background-color .5s;
+        &:hover, &:focus {
+            color: #fff;
+            background-color: $secondary-font-color;
+        }
     }
 }
+
+/* Discover Story */
+.discover-our-story {
+    .sub-headline {
+        @extend %extend-SubHeadline;
+        letter-spacing: -1px;
+        line-height: .42;
+    }
+    .global-headline {
+        text-align: center;
+        margin-top: 3.9rem;
+        .asterisk {
+            @extend %asterisk;
+            color: $body-font-color;
+            margin-top: 2.4rem 0;
+        }
+        .headline-dark {
+            color: $main-font-color-dark;
+            letter-spacing: .7rem;
+            margin-right: -.7rem;
+        }
+    }
+    .restaurant-info {
+        text-align: center;
+        .restaurant-description {
+            margin-bottom: 3rem;
+            p {
+                line-height: 1.6;
+                margin-bottom: 2.4rem;
+            }
+            .btn {
+                @extend %btn;
+            }
+            .body-btn {
+                font-size: 1.5rem;
+                color: $secondary-font-color;
+                position: relative;
+                transition: color .5s;
+                &:before {
+                    content: '';
+                    width: 100%;
+                    height: 2px;
+                    position: absolute;
+                    left: 0;
+                    bottom: -3px;
+                    background-color: $secondary-font-color;
+                    transition: .5s;
+                }
+                &:hover, &:focus {
+                    color: $main-font-color-dark;
+                }
+                &:hover:before {
+                    color: $main-font-color-dark !important;
+                }
+            }
+        }
+    }
+}
+
+
+
 
 
 
