--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ header .nav:before {
   border: 0.6rem solid transparent;
 }
 
-.discover-our-story .sub-headline, .hero .sub-headline {
+.discover-our-menu .sub-headline, .tasteful-recipes .sub-headline, .discover-our-story .sub-headline, .hero .sub-headline {
   font-size: 8.5rem;
   font-family: "Herr Von Muellerhoff", cursive;
   color: #c59d5f;
@@ -144,9 +144,19 @@ header .nav:before {
   line-height: 0.4;
   letter-spacing: 2px;
 }
-.discover-our-story .sub-headline .first-letter, .hero .sub-headline .first-letter {
+.discover-our-menu .sub-headline .first-letter, .tasteful-recipes .sub-headline .first-letter, .discover-our-story .sub-headline .first-letter, .hero .sub-headline .first-letter {
   text-transform: uppercase;
   font-size: 10.3rem;
+}
+
+.discover-our-menu .headline, .tasteful-recipes .headline, .discover-our-story .global-headline .headline-dark, .hero .headline {
+  color: #fff;
+  font-size: 3.7rem;
+  font-family: "Source Sans Pro", sans-serif;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 0.5rem;
+  margin-right: -0.5rem;
 }
 
 .discover-our-story .global-headline .asterisk, .hero .separator .asterisk {
@@ -170,15 +180,6 @@ header .nav:before {
   display: flex;
   align-items: center;
   text-align: center;
-}
-.hero .headline {
-  color: #fff;
-  font-size: 3.7rem;
-  font-family: "Source Sans Pro", sans-serif;
-  text-transform: uppercase;
-  font-weight: 900;
-  letter-spacing: 0.5rem;
-  margin-right: -0.5rem;
 }
 .hero .separator {
   display: flex;
@@ -233,12 +234,10 @@ header .nav:before {
 }
 .discover-our-story .global-headline .asterisk {
   color: #515151;
-  margin-top: 2.4rem 0;
+  margin: 2.4rem 0;
 }
 .discover-our-story .global-headline .headline-dark {
-  color: #252525;
-  letter-spacing: 0.7rem;
-  margin-right: -0.7rem;
+  color: black;
 }
 .discover-our-story .restaurant-info {
   text-align: center;
@@ -269,8 +268,26 @@ header .nav:before {
 .discover-our-story .restaurant-info .restaurant-description .body-btn:hover, .discover-our-story .restaurant-info .restaurant-description .body-btn:focus {
   color: #252525;
 }
-.discover-our-story .restaurant-info .restaurant-description .body-btn:hover:before {
+.discover-our-story .restaurant-info .restaurant-description .body-btn:hover:before, .discover-our-story .restaurant-info .restaurant-description .body-btn:focus:before {
   color: #252525 !important;
+}
+
+/* Tasteful */
+.tasteful-recipes {
+  background: url("../img/tasteful-recipes.jpg") no-repeat center;
+  background-size: cover;
+}
+.between {
+  min-height: 65vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+/* Discover Menu */
+.discover-our-menu .headline {
+  color: #252525;
 }
 
 /*# sourceMappingURL=style.css.map */
