--- a/sass/index.scss
+++ b/sass/index.scss
@@ -439,6 +439,124 @@ header {
     }
 }
 
+/* Footer */
+footer {
+    padding: 7.9rem !important;
+    background-color: #121212;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    .back-to-top {
+        width: 7rem;
+        height: 7rem;
+        background-color: #121212;
+        position: absolute;
+        top: -3rem;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 50%;
+        i {
+            display: block;
+            color: #fff;
+            font-size: 2rem;
+            padding: 2rem;
+        }
+    }
+    .footer-content {
+        .asterisk {
+            @extend %asterisk;
+            margin: 2.4rem 0;
+        }
+        overflow: hidden;
+        h4 {
+            font-size: 1.9rem;
+            text-transform: uppercase;
+            font-weight: 100;
+            letter-spacing: 3px;
+            margin-bottom: 3rem;
+        }
+        .footer-content-about {
+            margin-bottom: 5.4rem;
+            p {
+                line-height: 2;
+            }
+        }
+        .social-icon {
+            list-style: none;
+            margin-bottom: 5.4rem;
+            display: flex;
+            justify-content: center;
+            i {
+                font-size: 2rem;
+                color: #fff;
+                padding: .8rem 2rem;
+                opacity: .5;
+                transition: color .5s;
+                &:hover {
+                    color: $secondary-font-color;
+                }
+            }
+        }
+    }
+    .newsletter-from {
+        width: 100%;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        .newsletter-input {
+            width: 100%;
+            max-width: 25rem;
+            padding: 1rem;
+            border-radius: .4rem;
+        }
+        .newsletter-btn {
+            background-color: transparent;
+            border: none;
+            color: $main-font-color-dark;
+            font-size: 1.6rem;
+            padding: 1px .6rem;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            margin-left: 10.5rem;
+            cursor: pointer;
+        }
+    }
+}
+
+/* Media queries */
+@media (min-width: 900px) {
+   
+    section {
+        padding: 7.9rem;
+    }
+
+    .menu-toggle {
+        display: none;
+    }
+    
+    header {
+        .nav {
+            justify-content: space-between !important;
+            .nav-list {
+                position: initial;
+                width: initial;
+                height: initial;
+                background-color: transparent;
+                padding: 0;
+                justify-content: initial;
+                flex-direction: row;
+                transform: initial;
+                .nav-item {
+                    margin: 0 2.4rem;
+                    border: none;
+                }
+            }
+        }
+    }
+}
+
+
 
 
 
