--- a/sass/index.scss
+++ b/sass/index.scss
@@ -76,7 +76,7 @@ header {
             position: fixed;
             top: 0;
             left: 0;
-            width: 40%;
+            width: 45%;
             height: 100vh;
             background: $main-font-color-dark;
             padding: 4.4rem;
@@ -467,7 +467,7 @@ footer {
             @extend %asterisk;
             margin: 2.4rem 0;
         }
-        overflow: hidden;
+        // overflow: hidden;
         h4 {
             font-size: 1.9rem;
             text-transform: uppercase;
@@ -526,7 +526,6 @@ footer {
 
 /* Media queries */
 @media (min-width: 900px) {
-   
     section {
         padding: 7.9rem;
     }
@@ -550,11 +549,105 @@ footer {
                 .nav-item {
                     margin: 0 2.4rem;
                     border: none;
+                    .nav-link {
+                        font-size: 1.3rem;
+                    }
+                }
+            }
+        }
+    }
+    .active {
+        position: relative;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background-color: #fff;
+            left: 0;
+            bottom: -3px;
+        }
+    }
+
+    .discover-our-story {
+        .restaurant-info {
+            display: flex;
+            align-items: center;
+            > div {
+                flex: 1;
+            }
+            .padding-right {
+                padding-right: 7rem;
+            }
+        }
+    }
+
+    footer {
+        .footer-content {
+            max-width: 77.5rem !important;
+            margin: auto !important;
+            .footer-content-about {
+                max-width: 51.3rem;
+                margin: 0 auto 5.4rem;
+            }
+            .footer-content-divider {
+                display: flex;
+                justify-content: space-between;
+                .social-media, .newsletter-container {
+                    width: 100%;
+                    max-width: 27.3rem;
+                    margin: 0 1rem;
+                }
+            }
+        }
+        
+    }
+}
+
+@media (max-width: 576px) {
+   
+    header {
+        .nav {
+            .nav-list {
+                transform: translateX(-150%);
+                width: 57%;
+            }
+        }
+    }
+
+    footer {
+        .footer-content {
+            .footer-content-divider {
+                .social-media {
+                    width: 100%;
+
+                }
+            }
+            .newsletter-from {
+                .newsletter-btn {
+                    margin-left: 9rem;
                 }
             }
         }
     }
 }
+
+@media (max-width: 320px) {
+    *{}
+    footer {
+        .footer-content {
+            .newsletter-from {
+                .newsletter-btn {
+                    margin-left: 6rem;
+                }
+                ::placeholder {
+                    font-size: 1rem;
+                }
+            }
+        }
+    }
+}
+
 
 
 
